fixed z-index of dropdown menu

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   position: sticky !important;
   top: 0px;
-  z-index: 1;
+  z-index: 11;
 }
 
 /* Logo */
